добавил некоторую инфу

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div> 
         <h3>Пара слов о себе</h3>
-        <p>Я есть1.</p>
+        <p>Меня зовут Матвей. Я начинающий верстальщик и в дальнейшем — React—разработчик! Сейчас я занялся созданием своего первого полноценного сайта! Я прохожу обучение на сайте <a href="https://htmlacademy.ru/">Htmlacademy.ru</a> — что мне очень нравится и помогает мне в развитии навыков!</p>
       </div>
 
       <div>
