--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="header-email" href="mailto:svetoslavhorobriy@gmail.com">svetoslavhorobriy@gmail.com</a>
         <a class="header-phone" href="tel:+79185459021">+79185459021</a> 
       </div>
-      
+      <button type="button" name="btn" class="button">Light theme</button>
     </header>
 
     <section class="hero-image">
