--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+
     <title>Портфолио Junior верстальщика</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
 
   <body>
     <header class="page-header">
       <div class="container">
         <a class="header-email" href="mailto:svetoslavhorobriy@gmail.com">svetoslavhorobriy@gmail.com</a>
-        <a class="header-phone" href="tel:+79185459021">+79185459021</a> 
+        <a class="header-phone" href="tel:+79185459021">+79185459021</a>
       </div>
       <button type="button" name="btn" class="button">Light theme</button>
     </header>
@@ -28,9 +29,9 @@
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
           <img src="files/islands-300.jpeg" width="928" height="536" alt="Matvey Avdeev">
-        </figure> 
+        </figure>
 
-      <div> 
+      <div>
         <h3>Пара слов о себе</h3>
         <p>Меня зовут Матвей. Я начинающий верстальщик и в дальнейшем — React—разработчик! Сейчас я занялся созданием своего первого полноценного сайта! Я прохожу обучение на сайте <a href="https://htmlacademy.ru/">Htmlacademy.ru</a> — что мне очень нравится и помогает мне в развитии навыков!</p>
       </div>
@@ -49,7 +50,7 @@
           <dd class="level"><div style="width: 30%;">30%</div></dd>
         </dl>
       </div>
-      
+
       </div>
     </section>
 
@@ -69,9 +70,10 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="footer-email" href="mailto:svetoslavhorobriy@gmail.com">svetoslavhorobriy@gmail.com</a> 
-        <a class="footer-phone" href="tel:+79185459021">+79185459021</a> 
+        <a class="footer-email" href="mailto:svetoslavhorobriy@gmail.com">svetoslavhorobriy@gmail.com</a>
+        <a class="footer-phone" href="tel:+79185459021">+79185459021</a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
